fix(QDialog): minimed max height on mobile browsers

--- a/ui/src/components/select/select.styl
+++ b/ui/src/components/select/select.styl
@@ -50,7 +50,7 @@
 
 // addressbar always gets shown, so need to slim this down
 body.mobile:not(.cordova) .q-select__dialog
-  max-height calc(100vh - 80px) !important
+  max-height calc(100vh - 108px) !important
 
 body.platform-ios .q-dialog__inner--top .q-select__dialog
   max-height 50vh !important
